# OpenAccel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt
src/addons/: CMakeLists.txt
src/addons/meshMotion/: meshMotion.cpp  meshMotion.h
src/addons/meshMotion/deformation/: deformation.cpp  deformation.h
src/addons/meshMotion/transformation/: transformation.cpp  transformation.h
src/addons/rigidBody/: rigidBody.cpp  rigidBody.h
src/addons/wallDistance/: wallDistance.cpp  wallDistance.h
src/addons/wallDistance/meshWave/: meshWave.cpp  meshWave.h
src/addons/wallDistance/wallScale/: wallScale.cpp  wallScale.h
src/assemble/: CMakeLists.txt  assembler.h
src/assemble/heatTransfer/thermalEnergy/: thermalEnergyAssembler.h  thermalEnergyAssemblerElemBoundaryConditions.cpp  thermalEnergyAssemblerElemInterfaceConditions.cpp  thermalEnergyAssemblerNodeTerms.cpp
src/assemble/heatTransfer/thermalTemperature/: thermalTemperatureAssembler.h  thermalTemperatureAssemblerElemBoundaryConditions.cpp  thermalTemperatureAssemblerElemInterfaceConditions.cpp  thermalTemperatureAssemblerElemTerms.cpp  thermalTemperatureAssemblerNodeTerms.cpp
src/assemble/heatTransfer/totalEnergy/: totalEnergyAssembler.h  totalEnergyAssemblerElemBoundaryConditions.cpp  totalEnergyAssemblerElemInterfaceConditions.cpp  totalEnergyAssemblerElemTerms.cpp  totalEnergyAssemblerNodeTerms.cpp
src/assemble/phiAssembler/: phiAssembler.h  phiAssemblerElemBoundaryConditions.hpp  phiAssemblerElemInterfaceConditions.hpp  phiAssemblerElemTerms.hpp  phiAssemblerNodeTerms.hpp
src/assemble/solidMechanics/solidDisplacement/: solidDisplacementAssembler.cpp  solidDisplacementAssembler.h  solidDisplacementAssemblerElemBoundaryConditions.cpp  solidDisplacementAssemblerElemInterfaceConditions.cpp  solidDisplacementAssemblerElemTerms.cpp  solidDisplacementAssemblerNodeTerms.cpp
src/basic/: CMakeLists.txt  dataHandler.h  dataHandler.hpp  macros.cpp  macros.h  types.cpp  types.h
src/controls/: CMakeLists.txt  controls.cpp  controls.h  controlsIO.cpp
src/domain/: CMakeLists.txt  domain.cpp  domain.h  domainIO.cpp
src/equation/: CMakeLists.txt  equation.cpp  equation.h  fluidEquationsIncludes.h  linearSystem.h
src/equation/auxiliary/: convergenceAcceleration.cpp  convergenceAcceleration.h
src/equation/flow/: segregatedFlowEquations.cpp  segregatedFlowEquations.h
src/equation/flow/navierStokes/: navierStokesEquation.cpp  navierStokesEquation.h
src/equation/flow/pressureCorrection/: pressureCorrectionEquation.cpp  pressureCorrectionEquation.h
src/equation/heatTransfer/thermalEnergy/: thermalEnergyEquation.cpp  thermalEnergyEquation.h
src/equation/heatTransfer/thermalTemperature/: thermalTemperatureEquation.cpp  thermalTemperatureEquation.h
src/equation/heatTransfer/totalEnergy/: totalEnergyEquation.cpp  totalEnergyEquation.h
src/equation/multiphase/freeSurfaceFlow/: segregatedFreeSurfaceFlowEquations.cpp  segregatedFreeSurfaceFlowEquations.h
src/equation/solidMechanics/solidDisplacement/: solidDisplacementEquation.cpp  solidDisplacementEquation.h
src/equation/turbulence/turbulentEddyFrequency/: turbulentEddyFrequencyEquation.cpp  turbulentEddyFrequencyEquation.h
src/equation/turbulence/turbulentKineticEnergy/: turbulentKineticEnergyEquation.cpp  turbulentKineticEnergyEquation.h
src/field/: CMakeLists.txt  field.h  field.hpp
src/field/elementField/: elementField.h  elementField.hpp
src/field/elementField/scalar/: elementScalarField.cpp  elementScalarField.h
src/field/nodeField/: nodeField.h  nodeField.hpp
src/field/nodeField/scalar/: nodeScalarField.cpp  nodeScalarField.h
src/field/nodeField/tensor/: nodeTensorField.cpp  nodeTensorField.h
src/field/nodeField/vector/: nodeVectorField.cpp  nodeVectorField.h
src/field/nodeSideField/: nodeSideField.cpp  nodeSideField.h  nodeSideField.hpp
src/field/sideField/: sideField.cpp  sideField.h  sideField.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.h  meshGeometry.cpp  meshIO.cpp  meshNodeGraph.cpp
src/mesh/graph/: nodeGraph.cpp  nodeGraph.h
src/mesh/interface/: dgInfo.cpp  dgInfo.h  interface.cpp  interface.h  interfaceIO.cpp  interfaceSideInfo.cpp  interfaceSideInfo.h
src/mesh/interface/transfer/: dataTransfer.cpp  dataTransfer.h  (+1 more)
src/mesh/validation/: elementValidator.cpp  elementValidator.h
src/mesh/zone/: zone.cpp  zone.h  zoneIO.cpp
src/model/: CMakeLists.txt  model.cpp  model.h
src/model/flow/: flowModel.cpp  flowModel.h
src/model/heatTransfer/: heatTransferModel.cpp  heatTransferModel.h
src/model/multiphase/: multiphaseModel.cpp  multiphaseModel.h
src/model/solidMechanics/: solidMechanicsModel.cpp  solidMechanicsModel.h
src/model/turbulence/: turbulenceModel.cpp  turbulenceModel.h  turbulenceModelWallFunctions.cpp
src/mpi/: CMakeLists.txt  messager.cpp  messager.h
src/overrides/: CMakeLists.txt  overrides.cpp  overrides.h
src/post/: CMakeLists.txt  postProcess.cpp  postProcess.h  postProcessForce.cpp  postProcessProbe.cpp  postProcessReduction.cpp
src/realm/: CMakeLists.txt  fieldBroker.cpp  fieldBroker.h  fieldBrokerPhasic.cpp  initialConditions.h  realm.cpp  realm.h  smRealm.h  turbRealm.h
src/simulation/: CMakeLists.txt  simulation.cpp  simulation.h  simulationIO.cpp
src/simulation/auxiliary/: physicsConvergence.cpp  physicsConvergence.h
src/solver/: AMG.h  CMakeLists.txt  coefficients.h  controlData.h  linearSolver.h  linearSolverContext.h  linearSolverContext.hpp  residual.h
src/solver/HYPRE/: ContextHYPRE.h  HYPRESolver.h
src/solver/PETSc/: ContextPETSc.h  PETScSolver.h
src/solver/Trilinos/: ContextTrilinos.h  TrilinosSolver.h
src/solver/matrix/: CRSConnectivity.h  CRSMatrix.h  CRSMatrix.hpp  CRSNodeGraph.cpp  CRSNodeGraph.h  CRSNodeGraphSynchronizer.h
src/solver/utils/: Common.h  Profiler.cpp  Profiler.h
src/utils/: CMakeLists.txt
src/utils/calculus/: polynomial.h  vectorUtils.h
src/utils/geometry/: pointInPolyhedron.cpp  pointInPolyhedron.h  scatterToSurface.cpp  scatterToSurface.h  surfaceComparator.cpp  surfaceComparator.h
(+209 files in other folders)
