# File       : CMakeLists.txt
# Created    : Thu Oct 16 2025 08:17:36 (+0200)
# Author     : Fabian Wermelinger
# Description: CMake build definitions
# Copyright (c) 2025 CCFNUM, Lucerne University of Applied Sciences and Arts.
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(addons)
add_subdirectory(assemble)
add_subdirectory(basic)
add_subdirectory(controls)
add_subdirectory(domain)
add_subdirectory(equation)
add_subdirectory(field)
add_subdirectory(overrides)
add_subdirectory(mesh)
add_subdirectory(model)
add_subdirectory(mpi)
add_subdirectory(post)
add_subdirectory(realm)
add_subdirectory(simulation)
add_subdirectory(utils)
